# Data-Ingest

./: .env.example  .gitignore  Makefile  README.md  chunk_all_documents.sh  pyproject.toml
src/: __init__.py  contextual_chunking.py  embedding.py  indexing.py  process_documents.py  retrieve.py
test_del/: test.py
tests/: __init__.py  conftest.py  test_contextual_chunking.py  test_embedding.py  test_indexing.py  test_integration.py  test_process_documents.py  test_retrieve.py
